build/fat_tool_build-prefix/src/fat_tool_build-stamp/fat_tool_build-build-err.log
In file included from /home/mm8/Documents/OS/MM8/MM8-OS/tools/fat/fat.h:3,
                 from /home/mm8/Documents/OS/MM8/MM8-OS/tools/fat/fat.c:1:
/home/mm8/Documents/OS/MM8/MM8-OS/tools/fat/disk.h:6:13: error: ‘bool’ cannot be defined via ‘typedef’
    6 | typedef int bool;
      |             ^~~~
/home/mm8/Documents/OS/MM8/MM8-OS/tools/fat/disk.h:6:13: note: ‘bool’ is a keyword with ‘-std=c23’ onwards
/home/mm8/Documents/OS/MM8/MM8-OS/tools/fat/disk.h:6:1: warning: useless type name in empty declaration
    6 | typedef int bool;
      | ^~~~~~~
gmake[5]: *** [CMakeFiles/fat.dir/build.make:79: CMakeFiles/fat.dir/fat.c.o] Error 1
gmake[4]: *** [CMakeFiles/Makefile2:87: CMakeFiles/fat.dir/all] Error 2
gmake[3]: *** [Makefile:136: all] Error 2
